--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    
-    
+
+	  <dependency>
+		  <groupId>MFLoan</groupId>
+		  <artifactId>MFLoanManage</artifactId>
+		  <version>1.0-SNAPSHOT</version>
+	  </dependency>
     
     <!-- Hibernate -->
 		<dependency>
