--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
           <artifactId>poi</artifactId>
           <version>3.10.1</version>
       </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.lowagie/itext -->
+      <dependency>
+          <groupId>com.lowagie</groupId>
+          <artifactId>itext</artifactId>
+          <version>2.1.7</version>
+      </dependency>
+
   </dependencies>
   <parent>
   	<groupId>MFLoan</groupId>
