--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
           <version>2.1.7</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/com.lowagie/itext-rtf -->
+      <dependency>
+          <groupId>com.lowagie</groupId>
+          <artifactId>itext-rtf</artifactId>
+          <version>2.1.7</version>
+      </dependency>
+
+
   </dependencies>
   <parent>
   	<groupId>MFLoan</groupId>
