--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 		  <artifactId>MFLoanManage</artifactId>
 		  <version>1.0-SNAPSHOT</version>
 	  </dependency>
+      <dependency>
+          <groupId>MFLoan</groupId>
+          <artifactId>MFLoanAdmin</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
       <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
       <dependency>
           <groupId>org.apache.poi</groupId>
