--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,22 @@
       <dependency>
           <groupId>org.apache.poi</groupId>
           <artifactId>poi</artifactId>
-          <version>3.10.1</version>
+          <version>3.15</version>
       </dependency>
+
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>3.15</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-scratchpad</artifactId>
+          <version>3.15</version>
+      </dependency>
+
 
       <!-- https://mvnrepository.com/artifact/com.lowagie/itext -->
       <dependency>
