--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
           <artifactId>MFLoanAdmin</artifactId>
           <version>1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+          <groupId>MFLoan</groupId>
+          <artifactId>MFLoanDoc</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
+
       <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
       <dependency>
           <groupId>org.apache.poi</groupId>
